# newtube

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.frontend  README.md  app.js  docker-compose.yml  download_channel.sh  index.html  package-lock.json  package.json  pageAdmin.js  pageHome.js  pageViewer.js  setup-software.sh  setup_software.sh  styles.css  sw.js  userData.js
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
ansible/: inventory.example  playbook.yml
ansible/group_vars/: all.yml
ansible/templates/: newtube.env.j2
cypress/e2e/: home.cy.js
docker/: nginx.conf.template
src/: config.rs  lib.rs  metadata.rs  security.rs
