[package]
name = "newtube-tools"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
libsql = "0.9.29"
chrono = { version = "0.4.44", features = ["serde"] }
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread", "signal", "fs", "sync", "net"] }
tokio-util = { version = "0.7.18", features = ["io"] }
parking_lot = "0.12.5"
mime_guess = "2.0.5"
nix = { version = "0.31.1", default-features = false, features = ["user"] }
tempfile = "3.24.0"

[dev-dependencies]
